--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [project]
 name = "lights-out-yt"
 version = "0.1.0"
-description = "Add your description here"
-requires-python = ">=3.14"
+description = "Solving Lights Out with two approaches: bit-packed algebra and GPU tensors."
+requires-python = ">=3.10"
 dependencies = []
