--- a/pyproject.toml
+++ b/pyproject.toml
@@ -3,4 +3,6 @@ name = "lights-out-yt"
 version = "0.1.0"
 description = "Solving Lights Out with two approaches: bit-packed algebra and GPU tensors."
 requires-python = ">=3.10"
-dependencies = []
+dependencies = [
+    "numpy>=2.2.6",
+]
